prd/gke/04-kubernetes-manifests/apps/08-worker-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker-2
  namespace: ${NAMESPACE}
spec:
  replicas: 0
  selector:
    matchLabels:
      app: celery-worker-2
  template:
    metadata:
      labels:
        app: celery-worker-2
    spec:
      serviceAccountName: backend-serviceaccount
      priorityClassName: packamal-app-priority
      containers:
        - name: celery-worker-2
          image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/backend:${TAG}
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            - |
              until nc -z database 5432; do
                echo "Waiting for database..."
                sleep 0.5
              done
              exec celery -A packamal worker -l info -n worker2@%h -Q maintenance,celery
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
