prd/gke/04-kubernetes-manifests/apps/09-celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      serviceAccountName: backend-serviceaccount
      containers:
        - name: celery-beat
          image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${REPO_NAME}/backend:${TAG}
          imagePullPolicy: Always
          command: ["/bin/sh", "-c"]
          args:
            - |
              until nc -z database 5432; do
                echo "Waiting for database..."
                sleep 0.5
              done
              until nc -z redis-celery 6379; do
                echo "Waiting for Redis Celery..."
                sleep 0.5
              done
              exec celery -A packamal beat -l info
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
      volumes: []
